init converter